--- a/src/main/resources/fxml/list_patient.fxml
+++ b/src/main/resources/fxml/list_patient.fxml
@@ -2,30 +2,23 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
 <GridPane fx:controller="hu.mora.pages.patient.ListPatientsController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+          xmlns:fx="http://javafx.com/fxml">
     <padding>
-        <Insets top="25" right="25" bottom="10" left="25"/>
+        <Insets top="20"/>
     </padding>
+    <HBox GridPane.rowIndex="0" GridPane.columnIndex="0" alignment="CENTER">
+        <padding>
+            <Insets bottom="25"/>
+        </padding>
+        <Label text="Keresés: "/>
+        <TextField fx:id="searchField" onKeyReleased="#search"/>
+    </HBox>
 
-    <Text text="Welcome"
-          GridPane.columnIndex="0" GridPane.rowIndex="0"
-          GridPane.columnSpan="2"/>
-
-    <Label text="User Name:"
-           GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-
-    <TextField
-        GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-
-    <Label text="Password:"
-           GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-
-    <PasswordField fx:id="passwordField"
-                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-
+    <TableView fx:id="patientTable" GridPane.rowIndex="1" GridPane.columnIndex="0" minWidth="500" GridPane.hgrow="ALWAYS"
+               GridPane.vgrow="ALWAYS">
+    </TableView>
 </GridPane>
