--- a/src/main/resources/fxml/list_patient.fxml
+++ b/src/main/resources/fxml/list_patient.fxml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <GridPane fx:controller="hu.mora.pages.patient.ListPatientsController"
           xmlns:fx="http://javafx.com/fxml">
+
     <padding>
         <Insets top="20"/>
     </padding>
-    <HBox GridPane.rowIndex="0" GridPane.columnIndex="0" alignment="CENTER">
+    <GridPane GridPane.rowIndex="0" GridPane.columnIndex="0" hgap="10">
         <padding>
-            <Insets bottom="25"/>
+            <Insets left="10" right="10" bottom="25"/>
         </padding>
-        <Label text="Keresés: "/>
-        <TextField fx:id="searchField" onKeyReleased="#search"/>
-    </HBox>
 
-    <TableView fx:id="patientTable" GridPane.rowIndex="1" GridPane.columnIndex="0" minWidth="500" GridPane.hgrow="ALWAYS"
+        <HBox GridPane.rowIndex="0" GridPane.columnIndex="0" alignment="CENTER">
+            <Label text="Keresés: "/>
+            <TextField fx:id="searchField" onKeyReleased="#search"/>
+        </HBox>
+        <HBox GridPane.rowIndex="0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" alignment="CENTER_RIGHT">
+            <Button fx:id="newPatientButton" onAction="#newPatient" text="Új beteg"/>
+        </HBox>
+    </GridPane>
+
+    <TableView fx:id="patientTable" GridPane.rowIndex="1" GridPane.columnIndex="0" minWidth="700" GridPane.hgrow="ALWAYS"
                GridPane.vgrow="ALWAYS">
     </TableView>
 </GridPane>
