--- a/src/main/resources/fxml/patient_data.fxml
+++ b/src/main/resources/fxml/patient_data.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <GridPane fx:controller="hu.mora.pages.patient.PatientDataController"
-          xmlns:fx="http://javafx.com/fxml" stylesheets="@/fxml/main.css" alignment="center" minHeight="500" minWidth="400">
+          xmlns:fx="http://javafx.com/fxml">
 
     <ScrollPane GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS">
         <padding>
@@ -44,21 +44,27 @@
             <Label GridPane.rowIndex="4" GridPane.columnIndex="0" text="Telefonszám"/>
             <TextField fx:id="phone" GridPane.rowIndex="4" GridPane.columnIndex="1" promptText="0630/1234-567"/>
 
-            <Separator GridPane.rowIndex="5" GridPane.columnSpan="2" halignment="CENTER"/>
+            <!--EMAIL-->
+            <Label GridPane.rowIndex="5" GridPane.columnIndex="0" text="Email"/>
+            <TextField fx:id="email" GridPane.rowIndex="5" GridPane.columnIndex="1" promptText="valaki@email.com"/>
 
-            <Label GridPane.rowIndex="6" GridPane.columnIndex="0" text="Lakhely"/>
-            <Label GridPane.rowIndex="7" GridPane.columnIndex="0" text="Település"/>
-            <ComboBox fx:id="city" GridPane.rowIndex="7" GridPane.columnIndex="1" promptText="település"/>
+            <Separator GridPane.rowIndex="6" GridPane.columnSpan="2" halignment="CENTER"/>
 
-            <Label GridPane.rowIndex="8" GridPane.columnIndex="0" text="Utca"/>
-            <TextField fx:id="street" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+            <Label GridPane.rowIndex="7" GridPane.columnIndex="0" text="Lakhely"/>
+            <Label GridPane.rowIndex="8" GridPane.columnIndex="0" text="Település"/>
+            <ComboBox fx:id="city" GridPane.rowIndex="8" GridPane.columnIndex="1" promptText="település"/>
+
+            <Label GridPane.rowIndex="9" GridPane.columnIndex="0" text="Utca"/>
+            <TextField fx:id="street" GridPane.rowIndex="9" GridPane.columnIndex="1"/>
 
 
-            <Label fx:id="invalidFormText" GridPane.rowIndex="9" GridPane.columnIndex="0"
+            <Label fx:id="invalidFormText" GridPane.rowIndex="10" GridPane.columnIndex="0"
                    text="Hibás kitöltés. Javítsa a pirossal jelzett mezőket!"
                    styleClass="errorText" GridPane.columnSpan="2" visible="false"/>
-            <Button GridPane.rowIndex="10" GridPane.columnIndex="0" text="Mentés" onAction="#save" styleClass="btn-primary"/>
-            <Button GridPane.rowIndex="10" GridPane.columnIndex="1" text="Mégse" onAction="#cancel" styleClass="btn-warning"/>
+            <Button GridPane.rowIndex="11" GridPane.columnIndex="0" text="Mentés" onAction="#save"
+                    styleClass="btn-primary"/>
+            <Button GridPane.rowIndex="11" GridPane.columnIndex="1" text="Mégse" onAction="#cancel"
+                    styleClass="btn-default"/>
         </GridPane>
 
     </ScrollPane>
