--- a/src/main/resources/fxml/list_patient.fxml
+++ b/src/main/resources/fxml/list_patient.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <GridPane fx:controller="hu.mora.pages.patient.ListPatientsController"
-          xmlns:fx="http://javafx.com/fxml">
+          xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
 
     <padding>
         <Insets top="20"/>
