change to component scan and alert dialog on missing database connection

--- a/src/main/resources/fxml/main.css
+++ b/src/main/resources/fxml/main.css
@@ -1,3 +1,32 @@
+.errorText {
+    -fx-text-fill: red;
+}
+
+.error {
+    -fx-border-color: indianred;
+    -fx-border-width: 2px;
+}
+
+#errorMessageBox Label, #successMessageBox Label {
+    -fx-text-fill: #ffffff;
+}
+
+#errorMessageBox {
+    -fx-background-color: #d2322d;
+    -fx-border-color: #ac2925;
+}
+
+#errorMessageBox Button {
+    -fx-padding: 0 10;
+}
+
+#successMessageBox {
+    -fx-background-color: #5cb85c;
+    -fx-border-color: #4cae4c;
+}
+
+/* Bootstrap style */
+
 .hbox,
 .vbox,
 .pane,
@@ -297,13 +326,4 @@
 .btn-info:disabled {
     -fx-background-color: #5bc0de;
     -fx-border-color: #46b8da;
-}
-
-.errorText {
-    -fx-text-fill: red;
-}
-
-.error {
-    -fx-border-color: indianred;
-    -fx-border-width: 2px;
 }
